--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^6.0.2"
+    "react-markdown": "^6.0.2",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
