--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^3.6.6",
     "next": "10.0.6",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
