--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next": "10.0.6",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.3"
   },
