--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "dotenv-load": "^2.0.0",
     "gray-matter": "^4.0.3",
     "mongodb": "^3.6.6",
     "next": "10.0.6",
+    "next-env": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "^17.0.2",
